[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chandra"
dynamic = ["version"]
description = "A fast, lightweight text classification library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "chandra contributors" },
]
keywords = ["nlp", "text-classification", "machine-learning", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tokenizers>=0.15.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
]
benchmark = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/datalab-to/chandra"
Repository = "https://github.com/datalab-to/chandra"
Issues = "https://github.com/datalab-to/chandra/issues"

[tool.hatch.version]
path = "chandra/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["chandra"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=chandra --cov-report=term-missing"
